--- a/rocket_consumer/src/main/resources/application.properties
+++ b/rocket_consumer/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=8071
 
-apache.rocketmq.consumer.namesrvAddr=localhost:9876
-apache.rocketmq.consumer.group=producer_group_web_manage
+apache.rocketmq.consumer.namesrvAddr=10.8.0.66:9876
+apache.rocketmq.consumer.group=consumer
 apache.rocketmq.consumer.timeout=1000
 apache.rocketmq.consumer.retry=3
 apache.rocketmq.consumer.maxThread=3
 apache.rocketmq.consumer.minThread=3
 apache.rocketmq.consumer.MaxSize=10
-rocketmq.name-server=localhost:9876
+rocketmq.name-server=10.8.0.66:9876
