--- a/rocket_provider/src/main/resources/application.properties
+++ b/rocket_provider/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8072
 
-apache.rocketmq.provider.namesrvAddr=localhost:9876
-apache.rocketmq.provider.group=producer_group_web_manage
+apache.rocketmq.provider.namesrvAddr=10.8.0.66:9876
+apache.rocketmq.provider.group=producer
 apache.rocketmq.provider.timeout=1000
 apache.rocketmq.provider.retry=3
-rocketmq.name-server=localhost:9876
+rocketmq.name-server=10.8.0.66:9876
